Wed Sep  7 09:13:29 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * README:
        * agent/agent_impl.h:
        * asnmp/address.h:
        * asnmp/counter.h:
        * asnmp/gauge.h:
        * asnmp/integer.h:
        * asnmp/pdu.h:
        * asnmp/sagent.h:
        * asnmp/smival.h:
        * asnmp/snmp.cpp:
        * asnmp/target.h:
        * asnmp/timetick.h:
        * asnmp/transaction.h:
        * asnmp/wpdu.h:
        * examples/trap/trap.cpp:
          Layout changes

Mon Apr  6 09:57:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * asnmp/wpdu.cpp:
          Added support for Gauge32, thanks to Shai Kedem
          <shai_kedem at hotmail dot com> for reporting this

Wed Mar  8 10:46:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * asnmp/*.h:
          Converted to doxygen style of documentation

Wed Jan  4 22:47:13 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * ChangeLog:

          Untabify.
          Delete-trailing-whitespace.

          Added "Local Variables" section defining "add-log-time-format"
          to a really ugly lambda expression that formats changelog
          timestamps in UTC and works with both GNU Emacs and XEmacs.

Fri Dec 30 11:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * asnmp/transaction.cpp:
          Updated because the ACE_Time_Value constructors are now explicit

Fri Dec 23 09:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * asnmp/address.{h,cpp}:
          Added LEN as postfix for HASH0, HASH1 and HASH2. VxWorks 6.1 PPC
          defines HASH1 and HASH2

Wed Oct  5 10:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * asnmp/asn1.cpp:
        * asnmp/pdu.cpp:
          Fixed might be used uninitialized warnings in MinGW build

Fri Jul 15 10:12:19 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * Removed the asnmp.mwc file so that it can be regenerated by MPC